    - AddArc methods: the startAngle parameter is respected even when a full ellipse is drawn. Matters if the arc is
      connected to other path segments.
    - If a Path is drawn with DrawingOptions.FastThinLines and contains line segments or Bézier segments that are
      partially out of the bitmap bounds, then now the visible area of these segments are drawn more precisely.
    * Improved thin-line drawing performance of line segments and flattened segments
+ Making Figure, PathSegment, LineSegment, BezierSegment and ArcSegment classes public.
* Path class:
  + New Figures property
  * Improving performance when the flattened points are requested repeatedly without modifying the path.
  - StartFigure: not marking the figure closed when called on an empty path.


~~~~~~~~~
- v9.1.1:
~~~~~~~~~

- KGySoft.Drawing.Imaging namespace
===================================
- PredefinedColorsQuantizer class:
  - FromCustomFuction(Func<Color32, Color32>, KnownPixelFormat) method: Contrary to the documentation, the
    quantizing function was only called with non-alpha colors, after blending with black background. This bug
    appeared in v9.0.0. The fix affects also some other methods, e.g. FromBitmapData or ToGrayscale.


~~~~~~~~~
- v9.1.0:
~~~~~~~~~

- KGySoft.Drawing.Imaging namespace
===================================
- BitmapDataExtensions class:
  - Some End* methods of the Async APM (old Begin/End pattern) methods that rely on the TransformColors
    implementation could throw an InvalidOperationException in v9.0.0.


~~~~~~~~~
! v9.0.0:
~~~~~~~~~

! Assembly changes:
===================
! Dropping support for .NET Core 2.0. Manual compilation for .NET Core 2.0 is still possible but the public NuGet
  packages are not going to support this platform anymore. If you target the .NET Core 2.0 platform in your project,
  the v9.0.0 version of the NuGet package will pick the .NET Standard 2.0 build instead.

! General changes:
===================